2001-05-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* ucsched.cc: changed 0x0b, 0x0c and 0x4d scheduled opcodes (fixing SI gates & wells)

2001-05-06  Jeff Freedman  <jeff@amy.nerble.net>

	* Implemented caltrops.  Fixed energy-field animation.

2001-05-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* ucsched.cc: changed scheduled usecode 0x0b loop behaviour

2001-05-05  Jeff Freedman  <jeff@amy.nerble.net>

	* Working on server.  It's now polled in the main loop
	(Server_delay()) in XWIN builds.  (Doesn't do anything useful yet.)

2001-05-03  Tristan Tarrant  <nadir@users.sourceforge.net>

	* exult.cc: Chnaged from "X-windows Ultima 7 map browser" to 
	  "Multiplatform Ultima 7 game engine" :)

2001-05-03  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed FoV and resurrection bugs.
	* ExultStudio:  Open egg editor.  Use
	'glade_xml_signal_autoconnect()' to set up signal handlers.

2001-05-02  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq/faq_html.xsl: begin counting sections at 0 to make room for changes
	* docs/faq/exult_faq.xml: FAQ updated see FAQ for details
	* FAQ: updated
	* my first CVS commit
	
2001-05-02  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gumps/gump_utils.cc: undo end_gump_mode with a modal gump
	* mapedit/Makefile.studio.cygwin: committed Travis' changes

2001-04-29  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/flx.in, Makefile.*, data/aud*.shp: audio options gump shapes
	* Makefile.*, gumps/Gump_ToggleButton.*: a button which toggles 
	between multiple selections
	* Makefile.*, gumps/Gump.cc, gumps/AudioOptions_gump.*: audio options
	* gumps/Gamemenu_gump.*: activate audio options gump
	* gumps/gump_utils.cc: remove gumps when displaying a modal gump
	* gumps/misc_buttons.cc: point disk icon to new file gump
	* data/defaultkeys.txt: change escape to close gumps or game menu
	* gamedat.cc: work around compiler problem
	* keys.*, keyactions.*: actions for game menu, new escape function